Update repo in cms config

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -1,6 +1,7 @@
 backend:
   name: github
-  repo: unicsmcr/netlify-cms
+  repo: unicsmcr/unicsmcr.com
+  branch: netlify-cms
   squash_merges: true
 
 media_folder: 'public/images'
