Minor updates to netlify cms

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -4,20 +4,20 @@ backend:
   branch: netlify-cms
   squash_merges: true
 
+publish_mode: editorial_workflow
 media_folder: 'public/images'
 public_folder: 'images'
 
 collections:
   - name: 'people'
     label: 'People'
-    folder: src/content/about-us
+    folder: src/content/people
     extension: json
     format: json
     create: true
     fields:
       - { name: title, label: Name }
       - { name: position, label: Position }
-      - { name: committee, label: Committee, widget: boolean, required: false }
       - {
           name: order,
           label: Order,
