--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -26,7 +26,7 @@ collections:
           valueType: 'string',
           required: true,
         }
-      - { name: img_href, label: Image URL, required: false, default: null }
+      - { name: image, label: 'team photo', widget: image }
   - name: 'blog'
     label: 'Blog Posts'
     folder: src/content/blog
