Add captcha on front-end, refactor and cleanup

--- a/.example.env
+++ b/.example.env
@@ -3,5 +3,6 @@ UNICS_EMAIL=''
 
 FB_ACCESS_TOKEN=''
 
-SITE_RECAPTCHA_KEY=''
+# For react to inject the env variable we need it to start with "REACT_APP_"
+REACT_APP_SITE_RECAPTCHA_KEY=''
 SITE_RECAPTCHA_SECRET=''
