--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.17",
     "react-dom": "^16.12.0",
-    "react-google-recaptcha": "^2.0.1",
     "react-recaptcha": "^2.3.10",
     "react-router-dom": "^5.1.2",
     "react-router-hash-link": "^1.2.2",
     "react-scripts": "^3.4.0",
     "react-scroll": "^1.7.16",
+    "reaptcha": "^1.7.2",
     "styled-components": "^4.4.1"
   },
   "scripts": {
