--- a/package.json
+++ b/package.json
@@ -10,10 +10,9 @@
     "@fortawesome/react-fontawesome": "^0.1.7",
     "@sendgrid/mail": "^6.5.4",
     "node-fetch": "^2.6.0",
-    "react": "^16.12.0",
-    "react-bootstrap": "^1.0.0-beta.17",
-    "react-dom": "^16.12.0",
-    "react-recaptcha": "^2.3.10",
+    "react": "^16.13.1",
+    "react-bootstrap": "^1.0.0",
+    "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "react-router-hash-link": "^1.2.2",
     "react-scripts": "^3.4.0",
