--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -1,48 +1,72 @@
 backend:
   name: github
   repo: unicsmcr/unicsmcr.com
+  branch: netlify-cms
   squash_merges: true
 
-publish_mode: editorial_workflow
+# publish_mode: editorial_workflow
 media_folder: 'public/images'
 public_folder: 'images'
 
 collections:
-  - name: 'people'
-    label: 'People'
-    folder: src/assets/people
-    extension: json
-    format: json
+  - name: 'committee'
+    label: 'Committee'
+    folder: 'src/assets/team'
     create: true
+    format: 'json'
+    extension: 'json'
     fields:
-      - { name: title, label: Name }
-      - { name: position, label: Position }
       - {
-          name: order,
-          label: Order,
-          widget: number,
+          name: 'member',
+          label: 'Member',
+          widget: 'relation',
+          collection: 'team',
+          searchFields: ['title', 'position'],
+          valueField: 'title',
+          displayFields: ['title', 'position'],
+          multiple: true,
+        }
+  - name: 'team'
+    label: 'Team'
+    folder: 'src/assets/team/people'
+    create: true
+    format: 'json'
+    extension: 'json'
+    fields:
+      - { name: 'title', label: 'Name' }
+      - { name: 'position', label: 'Position' }
+      - {
+          name: 'order',
+          label: 'Order',
+          widget: 'number',
           min: 0,
           valueType: 'string',
           required: true,
         }
-      - { name: image, label: 'team photo', widget: image }
+      - { name: 'image', label: 'team photo', widget: 'image' }
   - name: 'blog'
     label: 'Blog Posts'
-    folder: src/assets/blog
+    folder: 'src/assets/blog'
     slug: '{{year}}-{{month}}-{{day}}_{{slug}}'
     create: true
+    format: 'json'
+    extension: 'json'
     fields:
-      - { name: title, label: Title }
-      - { name: titleBackground, label: 'post background photo', widget: image }
-      - { name: type, widget: hidden, default: blog }
-      - { name: date, label: Date, widget: date }
+      - { name: 'title', label: 'Title' }
       - {
-          name: author,
-          label: Author,
-          widget: relation,
-          collection: 'people',
-          searchFields: [title, position],
-          valueField: title,
-          displayFields: [title, position],
+          name: 'titleBackground',
+          label: 'post background photo',
+          widget: 'image',
         }
-      - { name: body, label: Body, widget: markdown }
+      - { name: 'type', widget: 'hidden', default: 'blog' }
+      - { name: 'date', label: 'Date', widget: 'date' }
+      - {
+          name: 'author',
+          label: 'Author',
+          widget: 'relation',
+          collection: 'people',
+          searchFields: ['title', 'position'],
+          valueField: 'title',
+          displayFields: ['title', 'position'],
+        }
+      - { name: 'body', label: 'Body', widget: 'markdown' }
